[project]
name = "qua-libs"
version = "0.0.0"
description = "A collection of examples to be used with QUA language"
requires-python = ">=3.9,<3.14"
authors = [{ name = "Quantum Machines", email = "info@quantum-machines.co" }]
license = "BSD-3-Clause"
dynamic = ["dependencies"]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
cma = ">=3.0.3"
colorama = ">=0.4.3"
h5py = ">=3.2.1"
jinja2 = ">=2.11.2"
matplotlib = ">=3.2.2"
networkx = ">=2.5.1"
numpy = ">=1.18.5"
pandas = ">=1.2.4"
PyVISA = ">=1.11.3"
qcodes = ">=0.23.0"
qm-qua = ">=0.3.2"
qualang-tools = ">=0.3.3"
scikit-learn = ">=0.24.2"
scipy = ">=1.7.0"
seaborn = ">=0.11.1"
sqlalchemy = ">=1.3.18"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
poethepoet = "^0.10.0"
flake8 = "^3.9.1"

[tool.black]
line-length = 120
#force-exclude = '''Two-Flux-Tunable-Transmons/Use Case 4 - Single- and Two-Qubit State and Process Tomography/helper_functions.py'''
#include = '(examples)/.+\.pyi?$'
#include = '(Quantum Control Applications)/.+\.pyi?$'
#include = '(Tutorials)/.+\.pyi?$'

[tool.poe.tasks]
format="black examples"
check_format="black --check ."

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
