[tool.poetry]
name = "superconducting-calibrations"
version = "0.1.0"
description = "QM Superconducting Calibration Graphs"
readme = "README.md"
license = "BSD-3-Clause"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
quam = "*"
qualang-tools = ">=0.19.0"
qualibrate = ">=0.1.6"
qm-qua = ">=1.2.1"
tomli = { version = "^2.0.1", python = "<3.11" }
quam_builder = { git = "https://github.com/qua-platform/quam-builder.git" }
quam_libs = { path = "quam_libs", develop = true }
quam_config = { path = "quam_config", develop = true }
quam_experiments = { path = "quam_experiments", develop = true }

[tool.poetry.dev-dependencies]
pytest = "^8.3"

[tool.poetry-monoranger-plugin]
enabled = true
monorepo-root = "."
version-pinning-rule = '=='

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
