[project]
name = "quantum-dots-calibrations"
version = "0.1.0"
description = "QM Quantum Dots Calibration Graphs"
readme = "../README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "quam>=0.4.0",
    "qualang-tools>=0.19.0",
    "qualibrate>=0.2.1",
    "qm-qua>=1.2.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "quam-builder@git+https://github.com/qua-platform/quam-builder.git@feature/quantum_dots",
    "qualibration-libs@git+https://github.com/qua-platform/qualibration-libs.git",
    "xarray>=2024.7.0",
    "plotly>=5.24.1",
    "lmfit>=1.3.3",
    "scipy>=1.13.1",
    "qiskit-experiments>=0.9.0",
    "tqdm>=4.67.1",
    "qiskit<2.0",
    "scikit-image>=0.20.0",
]

[project.optional-dependencies]
# For analysis tests. Install: uv pip install -e ".[analysis]"
analysis = [
    "virtual-qpu; python_version >= '3.11'",
]
# For Bayesian MCMC fits (Rabi, Ramsey, etc.). Install: uv pip install -e ".[bayesian]"
# Requires jax (e.g. from virtual-qpu or analysis extra).
bayesian = [
    "numpyro>=0.15.0",
]

[tool.black]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
virtual-qpu = { git = "https://github.com/qua-platform/virtual_qpu.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.0.0a1",
    "pytest>=8.3.5",
    "numpyro>=0.15.0",
    "virtual-qpu; python_version >= '3.11'",
]

[tool.hatch.build.targets.wheel]
packages = ["calibrations", "quam_config", "calibration_utils"]

[tool.hatch.metadata]
allow-direct-references = true
# [tool.uv.sources]
# quam-builder = { git = "https://github.com/qua-platform/quam-builder.git" }
# qualibration-libs = { git = "https://github.com/qua-platform/qualibration-libs.git" }
