[project]
name = "superconducting-calibrations"
version = "0.1.0"
description = "QM Superconducting Calibration Graphs"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "quam>=0.4.0",
    "qualang-tools>=0.19.0",
    "qualibrate>=0.2.1",
    "qm-qua>=1.2.1",
    "tomli>=2.0.1; python_version < '3.11'",
    "xarray>=2024.7.0",
    "plotly>=5.24.1",
    "lmfit>=1.3.3",
    "scipy>=1.13.1",
    "qiskit-experiments>=0.9.0",
    "tqdm>=4.67.1",
    "qiskit<2.0",
]
# qualibration-libs @ git+https://github.com/qua-platform/qualibration-libs.git@d8cdec55de6ba06c764afb62d359948bf1928c16
# quam-builder @ git+https://github.com/qua-platform/quam-builder.git@7291eea1b7fac1de1284c9bd88b028c94e6da769

[tool.black]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=7.0.0a1", "pytest>=8.3.5"]

[tool.hatch.build.targets.wheel]
packages = ["calibrations", "quam_config", "calibration_utils"]

[tool.hatch.metadata]
allow-direct-references = true
# [tool.uv.sources]
# quam-builder = { git = "https://github.com/qua-platform/quam-builder.git" }
# qualibration-libs = { git = "https://github.com/qua-platform/qualibration-libs.git" }