[project]
name = "superconducting-calibrations"
version = "0.1.0"
description = "QM Superconducting Calibration Graphs"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.9,<3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "qm-qua>=1.2.1",
    "qualang-tools @ git+https://github.com/qua-platform/py-qua-tools.git@4576fbe2be38a79eadeb95f9e2d16ac2f1f5bc6d",
    "quam @ git+https://github.com/qua-platform/quam.git@fa3e049b9081c764176f707206981898e388b332",
    "qualibrate>=0.2.1",
    "qualibration-libs @ git+https://github.com/qua-platform/qualibration-libs.git@fc9d9cccf0e6eea0d9560e70a88d9ffa46426f4d",
    "quam-builder @ git+https://github.com/qua-platform/quam-builder.git@b8a25c355629f1108060860633b648abded26c87",
    "tomli>=2.0.1; python_version < '3.11'",
    "xarray>=2024.7.0",
    "plotly>=5.24.1",
    "lmfit>=1.3.3",
    "scipy>=1.13.1",
    "qiskit-experiments>=0.9.0",
    "tqdm>=4.67.1",
    "qiskit<2.0",
]

[tool.black]
line-length = 120

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = ["ipykernel>=7.0.0a1", "pytest>=8.3.5"]

[tool.hatch.build.targets.wheel]
packages = ["calibrations", "quam_config", "calibration_utils"]

[tool.hatch.metadata]
allow-direct-references = true
# [tool.uv.sources]
# quam-builder = { git = "https://github.com/qua-platform/quam-builder.git" }
# qualibration-libs = { git = "https://github.com/qua-platform/qualibration-libs.git" }