[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "readout-barthel"
version = "0.1.0"
description = "Bayesian analytic fitting of two-state spin readout data using the Barthel model"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Sebastian Orbell", email = "sebastian.orbell@quantum-machines.co" }
]
keywords = ["quantum", "readout", "bayesian", "numpyro", "jax", "spin qubit", "barthel"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

dependencies = [
    "jax>=0.4.30",
    "numpyro>=0.14",
    "matplotlib>=3.8",
    "scipy>=1.12",
    "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=24.0",
    "isort>=5.10",
    "build>=1.0.0",
    "twine>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/yourusername/readout_barthel"
Repository = "https://github.com/yourusername/readout_barthel"
Issues = "https://github.com/yourusername/readout_barthel/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["readout_barthel*"]
